# 2026-KRB-SPs-41-Vladyslav-Fushtor

./: .env.example  .gitignore  Dockerfile  Dockerfile.runner  Makefile  README.md  alembic.ini  dagster.yaml  docker-compose.yml  fix_drawio.py  pyproject.toml  scratch_diagram.py
alembic/: env.py  script.py.mako
api/: __init__.py  config.py  dependencies.py  main.py  schemas.py
api/auth/: auth_service.py  dependencies.py  exceptions.py  password_service.py  router.py  schemas.py  service.py  token_service.py
api/health/: router.py
api/middleware/: __init__.py  circuit_breaker.py  rate_limit.py
api/models/: db.py  schemas.py  user.py
api/routers/: health.py
api/utils/: redis_client.py
docs/: earthquake_api.postman_collection.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
pipeline/cli/: _backfill_pipeline_hours.py  _export_bi_parquet.py  backfill_hours.py  backfill_pipeline_hours.py  build_bi_marts.py  build_gold_layer.py  dq_hour.py  ingest_raw.py  load_bi_store.py  run_hour.py  run_pipeline_hour.py
pipeline/clients/: usgs_client.py
pipeline/config/: pg_settings.py  settings.py
pipeline/dq/: __init__.py  checks.py  thresholds.py
pipeline/enrich/: __init__.py  composite_enricher.py  geo.py  risk.py
pipeline/jobs/: _export_bi_to_parquet_job.py  _transform_silver_job.py  build_bi_marts_job.py  build_gold_bi_parquet_job.py  build_gold_job.py  dq_job.py  ingest_raw_job.py  load_bi_to_serving_layer_job.py  load_from_silver_job.py  transform_silver_job.py  (+1 more)
sql/: 001_init.sql  002_dwh.sql  003_dq.sql  004_bi_marts.sql  005_auth.sql  006_user_features.sql
tests/: conftest.py  test_auth.py  test_events.py  test_health.py  test_rate_limit.py  test_users.py
ui/: api_client.py  app.py
(+48 files in other folders)
