[project]
name = "pp-earthquake"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "python-dateutil>=2.9.0",
  "streamlit>=1.31.0",
  "pandas>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "duckdb>=1.2.2",
  "pyarrow>=15.0.0",
  "folium>=0.16.0",
  "streamlit-folium>=0.18.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
