[project]
name = "pp-earthquake"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "requests>=2.31.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dateutil>=2.9.0",
  "streamlit>=1.31.0",
  "pandas>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "duckdb>=1.2.2",
  "pyarrow>=15.0.0",
  "folium>=0.16.0",
  "streamlit-folium>=0.18.0",
  "reverse_geocoder>=1.5.1",
  "dagster>=1.6.0",
  "dagster-webserver>=1.6.0",
  # API
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "redis>=5.0.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.1.2",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.26.0",
]

[tool.setuptools]
packages = ["pipeline", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false